# apt-lemonator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RS-232/: rs232.c
cpp-interface/: main.cc  simulator-interface.hpp
cpp-tests/: main-file-test.cpp
python-interface/: main.cpp
python-simulator/: lemonator.py  simulator  simulator.py  simulator_gui.py
python-tests/: code_tests.py  lemonator-dummy-test.py  simulator_test.py
src/: main.cpp  main.hpp  main.py
